ref : updated pages headline

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Sourabh Khot
 email: sourabhkhot65@gmail.com
 description: >-
-  Software Engineer at Tacitbase, an AI-driven recruitment software.
+  Sourabh Khot | Software Engineer | Writes about software engineering, technology, and life.
 baseurl: ""
 url: ""
 github_username: sourabh-khot65
